--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "25ddbe4d-0058-4ca6-a349-d40aaa747e42"
 authors = ["OTDE <mail@sethchapman.com>"]
 version = "0.1.0"
 
+[compat]
+julia = "1"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
